2007-03-23  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.

2007-03-17  Jovan Naumovski  <jovan@lugola.net>
 
 	 * mk.po: Updated Macedonian translation.

2007-03-16  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-03-16  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

2007-03-12  Baris Cicek <baris@teamforce.name.tr

	* tr.po: Updated Turkish translation

2007-03-04  Erdal Ronahi  <erdal dot ronahi at gmail dot com>

	* ku.po: Updated Kurdish translation

2007-03-01  Maxim Dziumanenko <dziumanenko@gmail.com>

	* uk.po: Update Ukrainian translation.

2007-02-27  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Updated Lithuanian translation.

2007-02-25  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2007-02-09  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Jonathan Ernst.

2007-01-16  Yair Hershkovitz  <yairhr@gmail.com>

	* he.po: Updated Hebrew translation.

2006-12-12  Ales Nyakhaychyk  <nab@mail.by>

	* be.po: Updated Belarusian Translation.

2006-12-07  Raivis Dejus  <orvils@gmail.com>

        * lv.po: Updated Latvian Translation.

2006-12-1  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation.

2006-11-24  Djihed Afifi" <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation.

2006-11-19  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* pl.po: Translation updated by Marek Stepien.

2006-11-6  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation.

2006-10-30  Djihed Afifi <djihed@gmail.com> 

	* ar.po Updated Arabic Translation.

2006-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation.

2006-10-08  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation, fix #359973.

2006-10-08  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation.
