@@ -8,18 +8,20 @@ data/ui/yelp.glade
 data/yelp.schemas.in
 src/yelp-base.c
 src/yelp-bookmarks.c
-src/yelp-db-pager.c
-src/yelp-db-print-pager.c
+src/yelp-db-print.c
+src/yelp-docbook.c
+src/yelp-document.c
 src/yelp-error.c
-src/yelp-info-pager.c
+src/yelp-info.c
 src/yelp-io-channel.c
 src/yelp-main.c
-src/yelp-man-pager.c
-src/yelp-pager.c
+src/yelp-man.c
+src/yelp-page.c
 src/yelp-print.c
-src/yelp-search-pager.c
+src/yelp-search-parser.c
+src/yelp-search.c
 src/yelp-settings.c
-src/yelp-toc-pager.c
+src/yelp-toc.c
+src/yelp-transform.c
 src/yelp-window.c
-src/yelp-xslt-pager.c
 yelp.desktop.in.in
