@@ -1,3 +1,8 @@
+2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* POTFILES.in: 
+	Update POTFILES.in to reflect merge
+
 2007-03-23  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
